# snippets-dump

./: .gitignore  CNAME  README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  thinking.md
Templates/: create.html  error.html  index.html  layout.html  login.html  note.html  profile.html  register.html
routers/: notes.py  users.py
