[project]
name = "snippets-dump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "jwt>=1.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.50",
]
